testsuite/bsc.typechecker/string/StringKindSpecificToPoly.bs.bsc-out.expected
checking package dependencies
compiling StringKindSpecificToPoly.bs
Error: "StringKindSpecificToPoly.bs", line 9, column 4: (T0020)
  Type error at:
    a

  Expected type:
    StringKindSpecificToPoly.Foo a

  Inferred type:
    StringKindSpecificToPoly.Foo "a"

